--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,12 +44,12 @@
   border-radius:150px;
 
 }
-@media only screen and (max-width: 994px) {
+@media only screen and (max-width: 770px) {
   #image-box-perfil>img {
     width: 100%;
-    height: 50vh;
-    border-radius: 150px;
-    padding: 4px;
+    height: 45vh;
+    border-radius: 50%;
+    /* padding: 4px; */
   } 
 }
 
