--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,8 +40,8 @@
 
 #image-box-perfil>img {
   width:100%;
-  height:300px;
-  border-radius:150px;
+  height: 50vh;
+  border-radius:50%;
 
 }
 @media only screen and (max-width: 770px) {
