--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,20 +37,25 @@
 
 }
 
-
 #image-box-perfil>img {
-  width:100%;
+  width: 100%;
   height: 50vh;
-  border-radius:50%;
-
+  border-radius: 50%;
 }
+
+
+/* caousel  */
+.carousel-item>img {
+  height: 75vh;
+}
+
 @media only screen and (max-width: 770px) {
   #image-box-perfil>img {
     width: 100%;
     height: 45vh;
     border-radius: 50%;
     /* padding: 4px; */
-  } 
+  }
 }
 
 
@@ -73,4 +78,58 @@
     height: 10vh;
   }
 
+}
+
+
+
+/* footer  */
+footer .redes-sociales {
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  padding: 5px;
+  flex-wrap: wrap;
+}
+
+footer .redes-sociales a {
+  display: block;
+  width: 40px;
+  height: 40px;
+  background: #000;
+  color: #fff;
+  margin: 10px;
+  text-align: center;
+  border-radius: 100px;
+  transition: .3s ease all;
+}
+
+footer .redes-sociales .twitter {
+  background: #1da1f2;
+}
+
+footer .redes-sociales .facebook {
+  background: #3b5998;
+}
+
+footer .redes-sociales .instagram {
+  background: #c13584;
+}
+
+footer .redes-sociales a i {
+  font-size: 20px;
+  line-height: 40px;
+}
+
+footer .contenedor-icono:hover a {
+  animation: icono .5s ease;
+}
+
+@keyframes icono {
+  from {
+    transform: rotate3d(0, 0, 0, 0);
+  }
+
+  to {
+    transform: rotate3d(0, 1, 0, 360deg);
+  }
 }
