--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,47 +9,13 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   height: 620px;
-  /* -webkit-filter: sepia(100%);
-      -moz-filter: sepia(100%);
-      -o-filter: sepia(100%);
-      -ms-filter: sepia(100%); */
-  /* filter: sepia(100%); */
 }
 
-#title-name-jumbotron {
-  background-color: #343a40 !important;
-  color: white;
-  box-shadow: 5px 5px grey;
-  width: 100%;
-  height: 12vh;
-  font-size: 3.5rem;
-  font-weight: 300;
-  line-height: 1.2;
-}
-
-#title-profesion-jumbotron {
-  background-color: #343a40 !important;
-  color: white;
-  box-shadow: 5px 5px grey;
-  width: 100%;
-  height: 12vh;
-  font-size: 3.5rem;
-  font-weight: 300;
-  line-height: 1.2;
-
-
-}
-
+/* IMAGEN DE PERFIL  */
 #image-box-perfil>img {
   width: 100%;
   height: 50vh;
   border-radius: 50%;
-}
-
-
-/* caousel  */
-.carousel-item>img {
-  height: 75vh;
 }
 
 @media only screen and (max-width: 770px) {
@@ -61,32 +27,127 @@ body {
   }
 }
 
+/*FIN IMAGEN DE PERFIL  */
 
 
-@media only screen and (max-width: 994px) {
-  #title-name-jumbotron {
-    background-color: grey;
-    width: 100%;
-    height: 10vh;
-    font-size: 2.5rem;
-    font-weight: 300;
-    line-height: 1.2;
-  }
+/* TITLE JUMBOTROM */
+#box-title-jumbotrom {
+  background-color: #343a40 !important;
+  box-shadow: 5px 5px grey;
+  width: 100%;
+  height: 12vh;
+}
 
-  #title-profesion-jumbotron {
-    background-color: #343a40 !important;
-    color: white;
-    box-shadow: 5px 5px grey;
-    width: 100%;
-    height: 10vh;
-  }
+#title-name-jumbotron {
+  color: white;
+  font-size: 3.5rem;
+  font-weight: 300;
+  line-height: 1.2;
+}
 
+#box-profesion-jumbotron {
+  background-color: #343a40 !important;
+  box-shadow: 5px 5px grey;
+  width: 100%;
+  height: 12vh;
+}
+
+#title-profesion-jumbotron {
+
+  color: white;
+  font-size: 3.5rem;
+  font-weight: 300;
+  line-height: 1.2;
 }
 
 
+
+@media only screen and (max-width: 769px){
+  #box-title-jumbotrom {
+    background-color: #343a40 !important;
+    box-shadow: 5px 5px grey;
+    width: 100%;
+    height: 13vh;
+    max-height: 25vh;
+  }
+
+  #title-name-jumbotron {
+    color: white;
+    font-size: 1.5rem;
+    font-weight: 200;
+    line-height: 1.2;
+    padding: 4px;
+  }
+
+  #box-profesion-jumbotron {
+    background-color: #343a40 !important;
+    box-shadow: 5px 5px grey;
+    width: 100%;
+    height: 8vh;
+  }
+
+  #title-profesion-jumbotron {
+    color: white;
+    font-size: 1.5rem;
+    font-weight: 100;
+    line-height: 1.2;
+    padding: 4px;
+  }
+
+
+}
+
+@media only screen and (max-width: 1198px) and (min-width: 770px) {
+  #box-title-jumbotrom{
+    background-color: #343a40 !important;
+    box-shadow: 5px 5px grey;
+    width: 100%;
+    height: 20vh;
+  }
+  
+  #title-name-jumbotron {
+    color: white;
+    font-size: 2.5rem;
+    font-weight: 300;
+    line-height: 1.2;
+    padding: 4px;
+  }
+  
+  #box-profesion-jumbotron{
+    background-color: #343a40 !important;
+    box-shadow: 5px 5px grey;
+    width: 100%;
+    height: 8vh;
+  }
+  
+  #title-profesion-jumbotron {
+    color: white;
+    font-size: 1.5rem;
+    font-weight: 300;
+    line-height: 1.2;
+    padding: 4px;
+  }
+  body{
+    background-color: red;
+  }
+}
+
+/* FIN TITLE JUMBOTROM */
+
+
+/* CURSOS  */
+.crdCurso{
+  width: 100%;
+}
+
+/*FIN CURSOS  */
+
+
+
 /* PORTAFOLIO  */
-.cardimgPortafolio{
+.cardimgPortafolio {
   height: 40vh;
+  width: 100%;
 }
 
 
